--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,12 @@
 
     <array name="Theme">
         <item>Default</item>
-        <item>Yellow</item>
         <item>Green</item>
+        <item>OceanBlue</item>
         <item>Blue</item>
         <item>SkyBlue</item>
         <item>Red</item>
-        <item>OceanBlue</item>
+        <item>Yellow</item>
+        <item>OccurYellow</item>
     </array>
 </resources>
